- fix file list alignment

--- a/assets/styles/scss/goodoc-admin.scss
+++ b/assets/styles/scss/goodoc-admin.scss
@@ -16,7 +16,7 @@
       width: calc(100% * (1 / 8) - 10px - 1px);
       height: 150px;
       margin: 10px 0 0 2%;
-      flex-grow: 1;
+      /*flex-grow: 1;*/
       text-align: center;
 
       &.active {
